2007-07-23  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pgpool.conf.sample, pool.h, pool_config.l, pool_process_query.c:
	  Add new parameter named "replicate_select". Default value is
	  'false'. If it is true, pgpool replicates SELECT queries when
	  load balancing is disabled. This is a old specification which
	  was V1.0. If it is false, pgpool only sends them to the master
	  node. This is a current specification.

2007-07-17  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix hang up when backend node did fast or
	  immediate shutdown.

2007-07-11  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool.h, pool_stream.c, pool_process_query.c: Fix kind mismatch
	  error when deadlock occured.

2007-07-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* main.c: Fix signal handling.

2007-07-05  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix bugs in master_slave mode.

2007-06-27  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool.h, pool_process_query.c: Fix hang up when a SELECT query
	  has error inside transaction block. It occurs only in simple
	  query protocol.

2007-06-20  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* main.c: Fix SIGCHLD and SIGUSR1 signal handling. Signal handlers
	  set flags only, then a parent process checks flags in signal
	  safe places.

2007-06-18  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix compile warning and memory leak in
	  CursorResponse().

2007-06-15  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.1.1

2007-06-11  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix kind mismatch error when
	  load_balance_mode is true 

2007-06-02  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix typo EmptyQueryResponse
	  message. pgpool hung up in EXECUTE command. (Patch contributed
	  by Kenichi Sawada)

2007-05-29  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix handling protocol version 2.
