@@ -1,7 +1,7 @@
 /* -*-pgsql-c-*- */
 /*
  *
- * $Header: /cvsroot/pgpool/pgpool-II/pool.h,v 1.5.2.3 2007/07/23 06:54:15 y-asaba Exp $
+ * $Header: /cvsroot/pgpool/pgpool-II/pool.h,v 1.5.2.4 2007/07/24 08:41:32 y-asaba Exp $
  *
  * pgpool: a language independent connection pool server for PostgreSQL 
  * written by Tatsuo Ishii
@@ -64,11 +64,12 @@
 #define NO_STRICT_MODE(s) (strncasecmp((s), NO_STRICT_MODE_STR, strlen(NO_STRICT_MODE_STR)) == 0)
 
 typedef enum {
-    POOL_CONTINUE = 0,
+	POOL_CONTINUE = 0,
 	POOL_IDLE,
-    POOL_END,
-    POOL_ERROR,
-    POOL_FATAL
+	POOL_END,
+	POOL_ERROR,
+	POOL_FATAL,
+	POOL_DEADLOCK
 } POOL_STATUS;
 
 /* protocol major version numbers */
